--- a/layouts/partials/portfolio/skills.html
+++ b/layouts/partials/portfolio/skills.html
@@ -4,16 +4,16 @@
     {{ range $.Site.Data.skills }}
         <div class="subheading mb-3 skills-heading">{{ .grouping }}</div>
             <ul>
-        {{ $devIcons := readFile "themes/resume/static/vendor/devicons/css/devicons.min.css"}}
+
         {{ range .skills }}
             {{ if isset . "name" }}
                 <li class="list-inline-item">
-                  <i class="devicons devicons-{{ cond (in $devIcons (lower .name)) (lower .name) "terminal_badge" }}"></i>
+                  <i class="devicons devicons-{{ cond (in $.Site.Data.devicons (lower .name)) (lower .name) "terminal_badge" }}"></i>
                   <a href="{{.link}}">{{ .name }}</a>
                 </li>
             {{ else }}
               <li class="list-inline-item">
-                <i class="devicons devicons-{{ cond (in $devIcons (lower .)) (lower .) "terminal_badge" }}"></i>
+                <i class="devicons devicons-{{ cond (in $.Site.Data.devicons (lower .)) (lower .) "terminal_badge" }}"></i>
                 {{ . }}
               </li>
             {{ end }}
