--- a/layouts/partials/portfolio/contributions.html
+++ b/layouts/partials/portfolio/contributions.html
@@ -4,9 +4,9 @@
       {{ range .Site.Data.contributions }}
           <h3>{{ .name }}</h3>
           <h5><a href="{{ .link }}">{{ .link }}</a></h5>
-          <p>{{ .summary | safeHTML }}<p>
-          {{if  .image }}
-              <img src="{{ .image }}" style="max-height:300px;"/>
+          <p>{{ .summary | safeHTML }}</p>
+          {{ with .image }}
+              <img src="{{ . }}" style="max-height:300px;max-width:90%;" />
           {{ end }}
           <span class="project-fact">{{ .fact }}</span>
           <ul class="tags">
