now treats all projects as contentOSS and personal projects use sub-sections, added taxonomy for tech tagsremoved all vendor js and css in favor of popular cdn resource

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,6 +3,8 @@
   <div class="my-auto">
     <h1 class="mb-0"><span class="text-primary">{{ .Title }}</span></h1>
     {{ .Content }}
+
+    gggg
   </div>
 </section>
 {{ end }}
