--- a/layouts/projects/single.html
+++ b/layouts/projects/single.html
@@ -1,15 +1,12 @@
 {{ define "main" }}
-<section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
+{{ partial "breadcrumbs" . }}
+<section class="resume-section p-3 p-lg-5 d-flex d-column">
   <div class="my-auto">
     <h2 class="mb-0"><span class="text-primary">{{ .Title }}</span></h2>
     <p>{{ .Content }}</p>
     {{ with .Params.contributionUrl }}<p>Project link: <a href="{{ . }}">{{ . }}</a></p>{{ end }}
     {{ with .Params.image }}<img src="{{ . }}" style="max-width:80%;"/>{{ end }}
-    <ul class="tags">
-        {{ range  .Params.tags }}
-          <li><a class="tag">{{ . }}</a></li>
-        {{ end }}
-    </ul>
+    {{ partial "techtags" . }}
   </div>
 </section>
 {{ end }}
