--- a/layouts/projects/single.html
+++ b/layouts/projects/single.html
@@ -3,9 +3,10 @@
 <section class="resume-section p-3 p-lg-5 d-flex d-column">
   <div class="my-auto">
     <h2 class="mb-0"><span class="text-primary">{{ .Title }}</span></h2>
-    <p>{{ .Content }}</p>
+    {{ .Content }}
     {{ with .Params.contributionUrl }}<p>Project link: <a href="{{ . }}">{{ . }}</a></p>{{ end }}
     {{ with .Params.image }}<img src="{{ . }}" style="max-width:80%;"/>{{ end }}
+    {{ with .Params.fact }}<p class="project-fact">{{ . }}</p>{{ end }}
     {{ partial "techtags" . }}
   </div>
 </section>
