--- a/layouts/projects/section.html
+++ b/layouts/projects/section.html
@@ -2,13 +2,13 @@
 {{ partial "breadcrumbs" . }}
 <section class="resume-section p-3 p-lg-5 d-flex flex-column">
   <div class="my-auto" id="projects-content">
-    <h2>{{ .Title }}</h2>
+    <h1 id="{{ urlize .Title }}">{{ .Title }}</h1>
     <p>{{ .Content }}</p>
     {{ range .Data.Pages }}
         {{ partial "portfolio/projectSummary" . }}
     {{ end }}
     {{ range .Sections }}
-      <h3>{{ .Title }}</h3>
+      <h2 id="{{ urlize .Title }}"><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
       <p>{{ .Content }}</p>
       {{ range .Pages }}
         {{ partial "portfolio/projectSummary" . }}
