--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,14 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-	<title>{{ .Title }}</title>
+    <title>{{ .Title }}</title>
     <meta property="og:title" content="{{ .Title }}" />
-    <meta property="og:image" content="{{ .Site.BaseURL }}/images/profile3.jpg" />
-	<meta name="description" content="{{ .Site.Params.description }}">
+    <meta property="og:image" content="{{ .Site.Params.profileImage | absURL }}" />
+    <meta name="description" content="{{ .Site.Params.description }}">
     <meta property="og:description" content="{{ .Site.Params.description }}" />
-	<meta name="author" content="{{ .Site.Params.firstName }} {{ .Site.Params.lastName }}">
-
+    <meta name="author" content="{{ .Site.Params.firstName }} {{ .Site.Params.lastName }}">
     <!-- Bootstrap core CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom fonts for this template -->
