--- a/layouts/_default/search.html
+++ b/layouts/_default/search.html
@@ -18,7 +18,8 @@
     <div id="summary-${key}">
       <h4><a href="${link}">${title}</a></h4>
       <p>${snippet}</p>
-      <p>Tags: ${tags}</p>
+      ${ isset tags }<p>Tags: ${tags}</p>${ end }
+      ${ isset categories }<p>Tags: ${categories}</p>${ end }
     </div>
 </script>
 {{ end }}
