typo in categories for issue #9

--- a/layouts/_default/search.html
+++ b/layouts/_default/search.html
@@ -19,7 +19,7 @@
       <h4><a href="${link}">${title}</a></h4>
       <p>${snippet}</p>
       ${ isset tags }<p>Tags: ${tags}</p>${ end }
-      ${ isset categories }<p>Tags: ${categories}</p>${ end }
+      ${ isset categories }<p>Categories: ${categories}</p>${ end }
     </div>
 </script>
 {{ end }}
