Now using Font Awesome v5, brands only

--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -26,7 +26,7 @@
                   <a href="{{ .link }}" data-toggle="tooltip" title="{{ .name }}" data-offset="0 10">
                     <span class="fa-stack fa-lg">
                       <i class="fa fa-circle fa-stack-2x"></i>
-                      <i class="fa {{ if .icon}}fa-{{ .icon }}{{ else }}fa-{{ lower .name }}{{ end }} fa-stack-1x fa-inverse"></i>
+                      <i class="fab {{ if .icon}}fa-{{ .icon }}{{ else }}fa-{{ lower .name }}{{ end }} fa-stack-1x fa-inverse"></i>
                     </span>
                   </a>
                 </li>
