--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -43,6 +43,11 @@
             <a class="nav-link js-scroll-trigger" href="/#education">Education</a>
           </li>
       {{ end }}
+      {{ if .Site.Params.showBlog }}
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="/#blog">Blog</a>
+          </li>
+      {{ end }}
     </ul>
   </div>
 </nav>
