--- a/layouts/publications/single.html
+++ b/layouts/publications/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 {{ partial "breadcrumbs" . }}
-<section class="resume-section p-3 p-lg-5 d-flex d-column">
+<section class="resume-section p-3 p-lg-5 d-flex d-column content">
   <div class="my-auto">
     <h2 class="mb-0"><span class="text-primary">{{ .Title }}</span></h2>
     <p><a href="{{ .Params.link }}">Link to full {{ .Params.pubtype }}</a></p>
