--- a/layouts/_default/taxonomy.html
+++ b/layouts/_default/taxonomy.html
@@ -2,6 +2,8 @@
 <!-- this is displayed for a specific tag, and will link content related -->
 <section class="resume-section p-3 p-lg-5 d-flex d-column">
   <div class="my-auto">
+
+  Content tagged with  <span class="tag">{{ .Data.Term }}</span>
     <ul>
       {{ range .Data.Pages }}
           <li>
