fix issue with nav links not scrolling always
use hugo summary for blog

fix navlink scrolling

Fix indent of README.md

Update README.md

Fixed typos

fixes issue #29 and fixes #33 by adding markdown

update hugo versions

update hugo versions

update hugo versions

update hugo versions

Optional icon or link for Skills (#38)

* Updated the Skills template to be more flexible so that one can optionally specify an icon or link for a skill.

* Updated the sample skills to demonstrate new functionality of optionally specifying an icon or link for a skill.

Fix blog post responsive width issue (#36)

Adding a width to the child element of the blog post fix an issue with the page 'overflowing' from the parent container.

Corrected the FavIcon path. (#37)

replace deprecated .Hugo function with hugo. (#35)

Adds rel-me to social links (#34)

note contributors, add badge [skip ci]

Many thanks to  @awhitford @kaushalmodi @JulienRouse

more explicit about blog folder (#46)

cms:blog and settings

working out kinks in config paths

full config

Update Settings “general”

fix tests

support creations

Update Settings “general”

Update Projects “_index”

Update Projects “_index”

Update Publications “_index”

Update Contributions “_index”

Create Contributions “cvxc”

see if cms will render toml instead.

Update deploy-triggers.md

Delete cvxc.md

added contributions and publications, corrected sample content.

move CMS to exampleSite, not theme

Upload “/exampleSite/static/img/schema-org.png”

Update Contributions “schema-org”

Update Contributions “shields-docker”

update cnfig guide

--- a/layouts/partials/portfolio/skills.html
+++ b/layouts/partials/portfolio/skills.html
@@ -6,9 +6,14 @@
             <ul>
             {{ range .skills }}
                 {{ if isset . "name" }}
+                    {{ $devicon := cond (in $.Site.Data.devicons (lower .icon)) (lower .icon) (cond (in $.Site.Data.devicons (lower .name)) (lower .name) "terminal_badge") }}
                     <li class="list-inline-item">
-                      <i class="devicons devicons-{{ cond (in $.Site.Data.devicons (lower .name)) (lower .name) "terminal_badge" }}"></i>
-                      <a href="{{.link}}">{{ .name }}</a>
+                      <i class="devicons devicons-{{ $devicon }}"></i>
+                      {{if isset . "link"}}
+                          <a href="{{.link}}">{{ .name }}</a>
+                      {{ else }}
+                          {{ .name }}
+                      {{ end }}
                     </li>
                 {{ else }}
                   <li class="list-inline-item">
