--- a/layouts/partials/blogSummary.html
+++ b/layouts/partials/blogSummary.html
@@ -2,7 +2,7 @@
 <div class="resume-item d-flex flex-column flex-md-row mb-5">
   <div class="publication-content mr-auto">
     <h3 class="mb-0"><a href="{{ .Permalink }}">{{ .Params.title }}</a></h3>
-    <div>{{ .Params.description | safeHTML }}</div>
+    <div>{{ .Summary | safeHTML }}</div>
     <p>{{ partial "techtags" . }}</p>
   </div>
   <div class="resume-date text-md-right">
