--- a/layouts/partials/portfolio/education.html
+++ b/layouts/partials/portfolio/education.html
@@ -4,9 +4,10 @@
             {{ range .Site.Data.education }}
               <div class="resume-item d-flex flex-column flex-md-row mb-5">
                 <div class="resume-content mr-auto">
-                  <h3 class="mb-0">{{ .school }}</h3>
+                  <h3 class="mb-0">{{ .school | markdownify }}</h3>
                   <div class="subheading mb-3">{{ .degree }}</div>
-                  <div>{{ .major }}</div>
+                  <div>{{ .major | markdownify }}</div>
+                  <p>{{ .notes | markdownify }}
                 </div>
                 <div class="resume-date text-md-right">
                   <span class="text-primary">{{ .range }}</span>
