--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,19 +5,19 @@
    {{ end }}
    {{ if .Site.Params.showProjects }}
       {{ with .Site.GetPage "section" "projects/creations" }}
-         {{ .Scratch.Add "sectionId" "projects" }}
+         {{ .Scratch.Set "sectionId" "projects" }}
          {{ partial "sectionSummary" . }}
       {{ end }}
    {{ end }}
    {{ if .Site.Params.showOpenSource }}
       {{ with .Site.GetPage "section" "projects/contributions" }}
-         {{ .Scratch.Add "sectionId" "open" }}
+         {{ .Scratch.Set "sectionId" "open" }}
          {{ partial "sectionSummary" . }}
       {{ end }}
    {{ end }}
    {{ if .Site.Params.showPublications }}
       {{ with .Site.GetPage "section" "publications" }}
-         {{ .Scratch.Add "sectionId" "publications" }}
+         {{ .Scratch.Set "sectionId" "publications" }}
          {{ partial "sectionSummary" . }}
       {{ end }}
    {{ end }}
