Added variables for colour tweaking

--- a/static/css/resume.css
+++ b/static/css/resume.css
@@ -1,7 +1,15 @@
+:root {
+  --bodyTextColor: #868e96;
+  --borderColor: #dee2e6;
+  --mainAccentColor: #BD5D38;
+  --mainAccentColorFocused: #824027;
+  --mainBGColor: #FFFFFF;
+}
 body {
   font-family: 'Open Sans', serif;
   padding-top: 54px;
-  color: #868e96;
+  color: var(--bodyTextColor);
+  background-color: var(--mainBGColor);
 }
 
 @media (min-width: 992px) {
@@ -48,7 +56,7 @@ h2 {
 }
 
 .list-social-icons a:hover {
-  color: #BD5D38;
+  color: var(--mainAccentColor);
 }
 
 .list-social-icons a .fa-lg {
@@ -60,7 +68,7 @@ h2 {
 }
 
 .list-icons .list-inline-item i:hover {
-  color: #BD5D38;
+  color: var(--mainAccentColor);
 }
 
 #sideNav .navbar-nav .nav-item .nav-link {
@@ -109,7 +117,7 @@ h2 {
 }
 
 section.resume-section {
-  border-bottom: 1px solid #dee2e6;
+  border-bottom: 1px solid var(--borderColor);
   padding-top: 5rem !important;
   padding-bottom: 5rem !important;
 }
@@ -135,19 +143,19 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #BD5D38 !important;
+  background-color: var(--mainAccentColor) !important;
 }
 
 .text-primary {
-  color: #BD5D38 !important;
+  color: var(--mainAccentColor) !important;
 }
 
 a {
-  color: #BD5D38;
+  color: var(--mainAccentColor);
 }
 
 a:hover, a:focus, a:active {
-  color: #824027;
+  color: var(--mainAccentColorFocused);
 }
 
 img {
