can rename publications

--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -5,13 +5,13 @@
     <h1 id="{{ urlize .Title }}">{{ .Title }}</h1>
     <p>{{ .Content }}</p>
     {{ range .Data.Pages.ByWeight }}
-        {{ partial (printf "%s%s" .Section "Summary") . }}
+        {{ partial (printf "%s%s" .Type "Summary") . }}
     {{ end }}
     {{ range .Sections }}
       <h2 id="{{ urlize .Title }}"><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
       <p>{{ .Content }}</p>
       {{ range .Pages }}
-        {{ partial (printf "%s%s" .Section "Summary") . }}
+        {{ partial (printf "%s%s" .Type "Summary") . }}
       {{ end }}
     {{ end }}
   </div>
