--- a/layouts/partials/sectionSummary.html
+++ b/layouts/partials/sectionSummary.html
@@ -1,7 +1,10 @@
 <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="{{ .Scratch.Get "sectionId" }}">
   <div class="my-auto" id="projects-content">
-    <h2 class="mb-5"><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
-    <p>{{ .Content }}</p>
+    <div class=" pb-2 pt-3">
+      <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
+      {{ .Content | replaceRE "<p>" "<p class=\"lead\">" | safeHTML  }}      
+    </div>
+  
     {{ $featuredPages := where .Pages "Params.featured" true }}
     {{ range $featuredPages }}
       {{ partial (printf "%s%s" .Section "Summary") . }}
