--- a/layouts/partials/blogSummary.html
+++ b/layouts/partials/blogSummary.html
@@ -7,6 +7,9 @@
   </div>
   <div class="resume-date text-md-right">
     <span class="text-primary">{{ .Date.Format "January 2, 2006" }}</span>
-    <img src="{{ .Params.image }}" style="max-width:250px;padding:5px;"/>
+    {{ range $.Page.Resources.Match "teaser" }}
+    {{ $image := .Resize "200x" }}
+    <img src="{{ $image.Permalink }}" style="max-width:250px;padding:5px;"/>
+{{ end }}
   </div>
 </div>
