--- a/layouts/partials/blogSummary.html
+++ b/layouts/partials/blogSummary.html
@@ -8,10 +8,13 @@
   <div class="resume-date text-md-right flex-col">
     <span class="text-primary">{{ .Date.Format "January 2, 2006" }}</span>
     <div>
-    {{ with $.Page.Resources.GetMatch "teaser" }}
-	    {{ $image := .Fill "250x250" }}
-	    <img src="{{ $image.Permalink }}" style="max-width:250px;padding:5px;"/>
-	{{ end }}
+
+      {{ $teaser := default ($.Page.Resources.GetMatch "map") ($.Page.Resources.GetMatch "teaser") }}
+
+      {{ with $teaser }}
+	       {{ $image := .Fill "250x250" }}
+    	    <img src="{{ $image.Permalink }}" style="max-width:250px;padding:5px;"/>
+    	{{ end }}
 	</div>
   </div>
 </div>
