--- a/layouts/adv/single.html
+++ b/layouts/adv/single.html
@@ -7,7 +7,18 @@
     	<span class="">{{ .Date.Format "January 2, 2006" }}</span>
     </div>
     <div>
-    	{{ .Content }}
+    	{{ .Summary }}
+    </div>
+    <div>
+    	{{ with $.Page.Resources.GetMatch "map" }}
+		    {{ $image := .Resize "x400" }}
+		    {{ $gpx := $.Page.Resources.GetMatch "gpx"}}
+		    <a href="{{ $gpx.Permalink }}" title="Click to download gpx file"><img alt="Map image of this route"  src="{{ $image.Permalink }}" style="padding:5px;"/></a>
+		{{ end }}
+    </div>
+    <div>
+    	{{ $body := replace .Content .Summary "" }}
+		{{ $body | safeHTML }}
 	    {{ with .Params.link }}
 	    	<p>Project link: <a href="{{ . }}">{{ . }}</a></p>{{ end }}
 	</div>
