--- a/layouts/partials/advSummary.html
+++ b/layouts/partials/advSummary.html
@@ -1,15 +1,14 @@
 
 <div class="resume-item row mb-5">
-
-
   <div class="ml-3 col-auto col-md-3 col-lg-3 col-xl-2 advteaser mt-2">
     {{ $teaser := default ($.Page.Resources.GetMatch "map") ($.Page.Resources.GetMatch "teaser") }}
     {{ $roller := default ($.Page.Resources.GetMatch "teaser") ($.Page.Resources.GetMatch "map") }}
-   
+   <a href="{{ .Permalink }}">
        {{ $timage :=  $teaser.Fill "250x250" }}
         <img class="img-fluid" src="{{ $timage.Permalink }}" alt="Card Back">
        {{ $rimage :=  $roller.Fill "250x250" }}
         <img class="img-fluid  img-top" src="{{ $rimage.Permalink }}" >
+    </a>
   </div>
   <div class="col-12 col-md-8 col-lg-8 col-xl-9">
     <h3 class="mb-0"><a href="{{ .Permalink }}">{{ .Params.title }}</a></h3>
