show map hovering anywhere over summary

--- a/layouts/partials/advSummary.html
+++ b/layouts/partials/advSummary.html
@@ -1,5 +1,5 @@
 
-<div class="resume-item row mb-5">
+<div class="resume-item row mb-5 advteaser-container">
   <div class="ml-3 col-auto col-md-3 col-lg-3 col-xl-2 advteaser mt-2">
     {{ $teaser := default ($.Page.Resources.GetMatch "map") ($.Page.Resources.GetMatch "teaser") }}
     {{ $roller := default ($.Page.Resources.GetMatch "teaser") ($.Page.Resources.GetMatch "map") }}
