allow page to override og title meta

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,14 +4,16 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>{{ .Site.Title }} | {{ .Title }}</title>
-  <meta property="og:title" content="{{ .Site.Title }} | {{ .Title }}" />
+  <meta name="description" content="{{ if .IsHome }}{{ .Site.Params.description }}{{else}}{{ .Description }}{{ end }}">
 
-  {{if isset .Params "featured_image" }}
-    <meta property="og:image" content="{{ index .Params "featured_image" }}" />
+  {{ $preview_image := .Resources.GetMatch "site_preview" }}
+  {{if $preview_image }}
+    <meta property="og:image" content="{{ $preview_image.Permalink }}" />
+    <meta property="og:title" content="{{ $preview_image.Title }}" />  
   {{ else }}
     <meta property="og:image" content="{{ .Site.Params.profileImage | absURL }}" />
+    <meta property="og:title" content="{{ .Site.Title }} | {{ .Title }}" />   
   {{ end }}
-  <meta name="description" content="{{ if .IsHome }}{{ .Site.Params.description }}{{else}}{{ .Description }}{{ end }}">
   <meta property="og:description" content="{{ if .IsHome }}{{ .Site.Params.description }}{{else}}{{ .Description }}{{ end }}" />
   <meta name="author" content="{{ .Site.Params.firstName }} {{ .Site.Params.lastName }}">
   <!-- Bootstrap core CSS -->
